--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- Ganti Audio di sini -->
-  <audio src="musik/song (5) (mp3cut.net).mp3" id="linkmp3" class="sembunyi"></audio>
+  <audio src="song (5) (mp3cut.net).mp3" id="linkmp3" class="sembunyi"></audio>
 
   <div id="bodyblur">
     <!-- Wallpaper --><img src="https://i.pinimg.com/1200x/91/29/52/912952362445aeb22c9cd6ae7404f6ed.jpg" id="wallpaper" />
@@ -34,8 +34,8 @@
       <img src="https://feeldreams.github.io/bunga.gif" id="fotostiker1" />
       <img src="https://feeldreams.github.io/pandapanah.gif" id="fotostiker2" />
       <img src="https://feeldreams.github.io/pandaterlope.gif" id="fotostiker3" />
-      <img src="musik/Pin on Süßstoff_2.gif" id="fotostiker4" />
-      <img src="musik/Pin on Süßstoff.gif" id="fotostiker5" />
+      <img src="Pin on Süßstoff_2.gif" id="fotostiker4" />
+      <img src="Pin on Süßstoff.gif" id="fotostiker5" />
       <img src="https://feeldreams.github.io/emawh.gif" id="fotostiker6" />
     </div>
 
